@@ -1165,8 +1165,10 @@ usage(void) {
    printf("       are preferable where possible.\n");
    printf("\n");
    printf("Targets can be IPv4 addresses or hostnames. You can also use CIDR notation\n");
-   printf("(10.0.0.0/24) (network and broadcast included), ranges (10.0.0.1-10.0.0.10),\n");
-   printf("and network:mask (10.0.0.0:255.255.255.0).\n");
+   printf("(e.g. 10.0.0.0/24), network:mask notation (e.g. 10.0.0.0:255.255.255.0) and IP\n");
+   printf("ranges (e.g. 10.0.0.1-10.0.0.10). CIDR and network:netmask notation include the\n");
+   printf("IP network and broadcast addresses by default unless the --exclude-broadcast\n");
+   printf("option is specified.\n");
    printf("\n");
    printf("Options:\n");
    printf("\n");
@@ -1197,9 +1199,15 @@ usage(void) {
    printf("\t\t\tOne name or address pattern per line. Use \"-\" for stdin.\n");
    printf("\n--localnet or -l\tGenerate addresses from interface configuration.\n");
    printf("\t\t\tGenerates list from interface address and netmask\n");
-   printf("\t\t\t(network and broadcast included). You cannot use the\n");
-   printf("\t\t\t--file option or give targets on the command line.\n");
-   printf("\t\t\tUse --interface to specify the interface.\n");
+   printf("\t\t\t(network and broadcast included unless the\n");
+   printf("\t\t\t--exclude-broadcast option is specified). You cannot use\n");
+   printf("\t\t\tthe --file option or give targets on the command line\n");
+   printf("\t\t\twith this option. Use the --interface option to specify\n");
+   printf("\t\t\tthe interface if you are not using the first adapter.\n");
+   printf("\n--exclude-broadcast\tExclude the IP network and broadcast addresses from\n");
+   printf("\t\t\tranges generated with network/bits and network:netmask\n");
+   printf("\t\t\taddress patterns as well as the range generated from the\n");
+   printf("\t\t\tinterface configuration with the --localnet option.\n");
    printf("\n");
    printf("MAC/Vendor Mapping Files:\n");
    printf("\n--ouifile=<s> or -O <s>\tUse IEEE registry vendor mapping file <s>.\n");
